--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"server": "json-server --watch server.json",
+		"server": "json-server --watch --delay 700 server.json",
 		"build": "tsc && vite build",
 		"preview": "vite preview"
 	},
