--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"axios": "^1.2.0",
 		"json-server": "^0.17.1",
+		"polished": "^4.2.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.4",
